# papote

./: AGENTS.md  README.md  bpe.py  data_utils.py  discordloader.py  eval.py  interactive.py  model.py  pyproject.toml  requirements.txt  sampler.py  tests.py  text.pyx  train.py  train_bpe.py
.github/workflows/: ci.yml
model_specs/: __init__.py  chinchilla.py  fim.py  tiny.py
papote/: __init__.py  bite.py  bpe.py  chat.py  count_tokens.py  data_utils.py  eval.py  experiment.py  get_sizes.py  interactive.py  metrics.py  model.py  sampler.py  server.py  test_all.py  tests.py  text.h  text.pxd  text.pyx  think_experiment.py  train.py  train_bpe.py  utils.py
papote/deadcode/tokenizer/: text.h  token_pair.h
papote/experiments/: __init__.py
papote/experiments/randomcase/: utils.py
papote/experiments/think/: helpers.py
papote/tokenizer/: Makefile  __init__.py  main.cpp  main.py  tokenizer.pxd  tokenizer.pyx
tests/: bpe.json  conftest.py  test_attention.py  test_bpe_roundtrip.py  test_data_utils.py  test_experiments_smoke.py  test_metrics.py  test_rotary.py  test_rotary_single.py  test_sampler.py  test_server.py  test_transformer_rotary_flags.py  test_utils.py
tests/data/: sample1.txt  sample2.txt
