[project]
name = "papote"
version = "0.1.0"
description = "Language-model tooling and experiments"
authors = [{name = "Papote Team"}]
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "torchelie",
    "tokenizers",
    "tqdm",
    "ftfy",
    "flask",
    "flask-socketio",
    "colored",
    "pytest",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["papote*", "model_specs*"]
[tool.uv.sources]
torchelie = { git = "https://github.com/Vermeille/Torchelie.git", rev = "43028e17ab50fb40c21010a52f523c0fcc532d7d" }

[tool.pytest.ini_options]
testpaths = ["tests"]
